# databricks-dbt-cli

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: claude-code-review.yml  docs.yml  pre-commit.yml  release.yml  test.yml
api/: index.html
api/models/: index.html
api/modules/: index.html
developer-guide/adding-adapters/: index.html
developer-guide/architecture/: index.html
developer-guide/contributing/: index.html
developer-guide/testing/: index.html
docs/user-guide/: sqlfluff.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
scripts/: sqlfluff-project.ps1
search/: search_index.json
src/brix/: __init__.py  main.py  version_check.py
src/brix/commands/: __init__.py
src/brix/commands/dbt/: __init__.py  profile.py
src/brix/modules/: __init__.py
src/brix/modules/dbt/: __init__.py  passthrough.py
src/brix/modules/dbt/profile/: __init__.py  editor.py  models.py  prompts.py  service.py
src/brix/modules/dbt/project/: service.py
src/brix/scripts/: __init__.py  sqlfluff_hook.py
src/brix/utils/: __init__.py  logging.py
src/databricks_dbt_cli/modules/auth/: azure.py
test/: test_logging.py  test_version_check.py
tests/: conftest.py
tests/e2e/: __init__.py  test_brix_workflow.py  test_git_installation.py
tests/fixtures/dbt_project/: dbt_project.yml  profiles.yml
tests/fixtures/sqlfluff/: .gitignore  .sqlfluff  .sqlfluffignore  dbt_project.yml  packages.yml  profiles.yml
tests/fixtures/sqlfluff/analyses/: customer_cohort_analysis.sql  product_performance_analysis.sql
tests/fixtures/sqlfluff/macros/: databricks_utils.sql  date_spine.sql  generate_surrogate_key.sql
tests/fixtures/sqlfluff/models/: sources.yml
tests/fixtures/sqlfluff/models/databricks/: _databricks_models.yml  copy_into_example.sql  delta_merge_example.sql  liquid_clustering_example.sql  unity_catalog_example.sql
tests/fixtures/sqlfluff/models/marts/: _marts_models.yml  dim_customers.sql  dim_products.sql  fct_orders.sql
tests/fixtures/sqlfluff/models/staging/: _staging_models.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql
tests/fixtures/sqlfluff/seeds/: customers.csv  order_items.csv  orders.csv  products.csv
tests/fixtures/sqlfluff/tests/generic/: test_positive_values.sql
tests/fixtures/sqlfluff/tests/singular/: assert_order_amounts_match.sql  assert_valid_customer_status.sql
tests/integration/: test_dbt_integration.py
tests/unit/: test_dbt_passthrough.py  test_dbt_profile.py  test_dbt_profile_editor.py  test_dbt_project.py  test_logging.py  test_version_check.py
user-guide/commands/: index.html
user-guide/configuration/: index.html
user-guide/passthrough/: index.html
user-guide/profiles/: index.html
user-guide/projects/: index.html
user-guide/sqlfluff/: index.html
