[project]
name = "brix"
version = "1.3.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
authors = [{ name = "Kraus, Pascal", email = "pascal.kraus@outlook.com" }]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0",
    "questionary>=2.1.1",
    "typer>=0.20.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
]

[project.scripts]
brix = "brix.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "dbt-core>=1.9.0",
    "dbt-databricks>=1.11.0",
    "dbt-duckdb>=1.9.0",
    "poethepoet>=0.38.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "python-semantic-release>=10.5.2",
    "respx>=0.22.0",
    "ruff>=0.14.6",
    "ty>=0.0.1a27",
]

[tool.ruff]
target-version = "py310"
exclude = [".git", "dist"]

line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # PEP8 code-style
    "N",   # naming conventions
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "S",   # security issues
    "UP",  # pyupgrade
    "C90", # function complexity check
    "PTH", # pythlib nagger
    "SIM", # simplifications
    "D",   # pydocstyle
    "PT",  # pytest pyflakes
    "ANN", # enforce type hints
    "RUF", # ruff rules
    "T20", # flag prints
    "C4",  # comprehensions
    "W",   # pycodestyle warnings
]
ignore = ["E501"]

fixable = ["ALL"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"tests/*" = ["S101", "ANN", "D", "S603", "S607"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["brix"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
skip-magic-trailing-comma = false

[tool.ty.environment]
root = ["./src"]
python-version = "3.10"

[tool.ty.src]
exclude = [".git", "dist"]

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
possibly-unresolved-reference = "ignore"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "e2e: marks tests as end-to-end tests requiring dbt execution (deselect with '-m \"not e2e\"')",
]

[tool.poe.tasks]
lint = "ruff check ."
format = "ruff format ."
typecheck = "ty check"
test = "pytest"
test-unit = "pytest tests/unit"
test-integration = "pytest tests/integration -m integration"
test-e2e = "pytest tests/e2e -m e2e"
check = ["lint", "typecheck"]
pre-commit = "pre-commit run --all-files"
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"
docs-deploy = "mkdocs gh-deploy"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): {version}"
build_command = "uv build"
upload_to_vcs_release = true
dist_glob_patterns = ["dist/*"]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"
